changes to nav bars

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="main-container">
     <header>
       <nav class="navbar"> 
-        <a href="javascript:void(0);" class="hamburger" onclick="hamburgerMenu()"><i class="fa fa-bars" style="color: white; font-size: 2.5rem;"></i></a>
+        <a href="javascript:void(0);" class="hamburger" onclick="hamburgerMenu()"><i class="fa fa-bars" style="color: white; font-size: 2rem;"></i></a>
         <ul>
           <li><a class="active" href="#">HOME</a></li>
           <li><a href="#">LAWYERS</a></li>
@@ -24,7 +24,8 @@
           <li><a href="#">PERSONAL</a></li>
           <li><a href="#">BOOK NOW</a></li>
         </ul>
-        <h1 class="navhead">CSI & CO<br>FORENSICS</h1>
+        <h1 class="navhead-large">CSI & CO <br>FORENSICS</h1>
+        <h1 class="navhead-small">CSI&CO</h1>
       </nav>
     </header>
   </div>
