Trying a no-scroll design

--- a/index.html
+++ b/index.html
@@ -19,10 +19,9 @@
         <a href="javascript:void(0);" class="hamburger" onclick="hamburgerMenu()"><i class="fa fa-bars" style="color: white; font-size: 2rem;"></i></a>
         <ul>
           <li><a class="active" href="#">HOME</a></li>
-          <li><a href="#">LAWYERS</a></li>
-          <li><a href="#">COMMERCIAL</a></li>
-          <li><a href="#">PERSONAL</a></li>
-          <li><a href="#">BOOK NOW</a></li>
+          <li><a href="#">ABOUT</a></li>
+          <li><a href="#">CONTACT</a></li>
+          <li><a href="#">BOOK FREE CONSULT</a></li>
         </ul>
         <h1 class="navhead-large">CSI & CO <br>FORENSICS</h1>
         <h1 class="navhead-small">CSI&CO</h1>
@@ -49,10 +48,12 @@
       <div class="quick-link"><a href="#" id="individuals"><i class="fas fa-user svg"></i></a><span class="labels"><br>Personal</span></div>
       <div class="quick-link"><a href="#professionals" id="corporations"><i class="fas fa-user-tie svg"></i><a><span class="labels"><br>Legal Professional</span></div>
   </div>
-  <!--LEGAL PROFESSIONALS -->
+
+  
+  <!--LEGAL PROFESSIONALS 
   <div class="hero2" id="professionals">
   </div>
-
+  -->
   <!-- INDIVIDUALS -->
 
   <!-- CORPORATIONS -->
