--- a/index.html
+++ b/index.html
@@ -15,19 +15,28 @@
   <!-- NAVIGATION -->
   <div class="main-container">
     <header>
-      <nav class="navbar"> 
-        <a href="javascript:void(0);" class="hamburger" onclick="hamburgerMenu()"><i class="fa fa-bars" style="color: white; font-size: 2rem;"></i></a>
+      <nav id="navbar" class="navbar"> <a href="javascript:void(0);" class="down-arrow" onclick="dropDown()"><i id="arrow" class="fas fa-angle-down" style="color: white; font-size: 2rem;"></i></a>
         <ul>
           <li><a class="active" href="#">HOME</a></li>
-          <li><a href="#">ABOUT</a></li>
+          <li><a href="about.html">ABOUT</a></li>
           <li><a href="#">CONTACT</a></li>
           <li><a href="#">BOOK FREE CONSULT</a></li>
         </ul>
         <h1 class="navhead-large">CSI & CO <br>FORENSICS</h1>
         <h1 class="navhead-small">CSI&CO</h1>
       </nav>
+
+      <div id="dropbar" class="dropbar hidden fade-in"> 
+        <ul class="dropnav">
+          <li><a class="active" href="#">HOME</a></li>
+          <li><a href="about.html">ABOUT</a></li>
+          <li><a href="contact.html">CONTACT</a></li>
+          <li><a href="consult.html">BOOK FREE CONSULTATION</a></li>
+        </ul>
+      </nav>
     </header>
   </div>
+
 
 
   <!-- HERO SECTION -->
@@ -57,8 +66,8 @@
   <!-- INDIVIDUALS -->
 
   <!-- CORPORATIONS -->
-  
 
+<script src="script.js"></script>
 </body>
 </html>
 
