--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <ul>
           <li><a class="active" href="#">HOME</a></li>
           <li><a href="about.html">ABOUT</a></li>
-          <li><a href="#">CONTACT</a></li>
-          <li><a href="#">BOOK FREE CONSULT</a></li>
+          <li><a href="contact.html">CONTACT</a></li>
+          <li><a href="consult.html">FREE CONSULTATION</a></li>
         </ul>
         <h1 class="navhead-large">CSI & CO <br>FORENSICS</h1>
         <h1 class="navhead-small">CSI&CO</h1>
