--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>CSI&CO FORENSICS</title>
+  <title styl>CSI&CO FORENSICS</title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css?family=Vollkorn" rel="stylesheet">
@@ -18,9 +18,9 @@
       <nav id="navbar" class="navbar"> <a href="javascript:void(0);" class="down-arrow" onclick="dropDown()"><i id="arrow" class="fas fa-angle-down" style="color: white; font-size: 2rem;"></i></a>
         <ul>
           <li><a class="active" href="#">HOME</a></li>
-          <li><a href="about.html">ABOUT</a></li>
-          <li><a href="contact.html">CONTACT</a></li>
-          <li><a href="consult.html">FREE CONSULTATION</a></li>
+          <li><a href="#">ABOUT</a></li>
+          <li><a href="#">CONTACT</a></li>
+          <li><a href="#">FREE CONSULTATION</a></li>
         </ul>
         <h1 class="navhead-large">CSI & CO <br>FORENSICS</h1>
         <h1 class="navhead-small">CSI&CO</h1>
@@ -36,25 +36,42 @@
       </nav>
     </header>
   </div>
+  
+
 
   <!-- HERO SECTION -->
   <div class="hero">
+    <div class="layer">
       <div class="hero-container">
-        <div class="hero-header"><h1>Digital Forensics<br>& Data Breach Investigations</h1></div>
-        <div class="hero-paragraph"><p>Your <strong>professional</strong> resource for the<strong> recovery, extraction, preparation</strong> and <strong>preservation </strong>of digital evidence.</strong></p></div>
-        <div class="button-holder">
-            <button class="consult-button" id="consult-button">Book Your <strong>Free</strong><br> Consultation Now</button>
-            <div class="test"><button class="consult-button learn-button" id="learn-button">Learn More</button></div>
-        </div>
+        <h1>DIGITAL FORENSICS  &<br>DATA BREACH INVESTIGATIONS</h1>
+        <p>Your professional resource for the recovery, extraction, preparation and preservation of digital evidence.</p>
+        <div class="consult-button">FREE CONSULTATION</div>
       </div>
+      <div class="test">
+  <div class="clients">
+    <div class="clients-grid">
+      <div class="client-box"><i class="fas fa-user-injured"></i><h2>VICTIM</h2><p>Victims of any crime need to know how to handle their digital evidence</p></div>
+      <div class="client-box"><i class="fas fa-user-tie"></i><h2>LAWYER</h2><p>You may be missing key elements capable of swinging your hardest case</p></div>
+      <div class="client-box"><i class="fas fa-users"></i><h2>CORPORATE</h2><p>Data breaches are a common plauge, we can help you fight back.</p></div>
+      <div class="client-box"><i class="fas fa-user-shield"></i><h2>PERSONAL</h2><p>We specialize in all matters of digital security and evidence collection.</div>
+      </div>
+    </div>
+  </div>
   </div>
 
-  <!-- FOOTER -->
+  <!--
+  <div class="services">
+      <h1>PROFESSIONAL SERVICES</h1>
+  </div>
+  -->
+
+
+  <!-- FOOTER
   <div class="footer">
       <div class="quick-link"><a href="#" id="corporations"><i class="fas fa-users svg"></i></a><span class="labels"><br>Corporate</span></div>
       <div class="quick-link"><a href="#" id="individuals"><i class="fas fa-user svg"></i></a><span class="labels"><br>Personal</span></div>
       <div class="quick-link"><a href="#professionals" id="corporations"><i class="fas fa-user-tie svg"></i><a><span class="labels"><br>Legal Professional</span></div>
-  </div>
+  </div> -->
 
 <script src="script.js"></script>
 </body>
