--- a/contact.html
+++ b/contact.html
@@ -37,27 +37,17 @@
     </header>
   </div>
 
-
-
   <!-- HERO SECTION -->
   <div class="hero">
-  </div>
-
-    <!--USER SELECTION -->
+    <div class="contact-container">
+      </div>
+</div>
+  <!-- FOOTER -->
   <div class="footer">
       <div class="quick-link"><a href="#" id="corporations"><i class="fas fa-users svg"></i></a><span class="labels"><br>Corporate</span></div>
       <div class="quick-link"><a href="#" id="individuals"><i class="fas fa-user svg"></i></a><span class="labels"><br>Personal</span></div>
       <div class="quick-link"><a href="#professionals" id="corporations"><i class="fas fa-user-tie svg"></i><a><span class="labels"><br>Legal Professional</span></div>
   </div>
-
-  
-  <!--LEGAL PROFESSIONALS 
-  <div class="hero2" id="professionals">
-  </div>
-  -->
-  <!-- INDIVIDUALS -->
-
-  <!-- CORPORATIONS -->
 
 <script src="script.js"></script>
 </body>
