Final Touches on CSI 2.0

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title styl>CSI&CO FORENSICS</title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Vollkorn" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 
 </head>
@@ -36,8 +36,6 @@
       </nav>
     </header>
   </div>
-  
-
 
   <!-- HERO SECTION -->
   <div class="hero">
@@ -45,7 +43,6 @@
       <div class="hero-container">
         <h1>DIGITAL FORENSICS  &<br>DATA BREACH INVESTIGATIONS</h1>
         <p>Your professional resource for the recovery, extraction, preparation and preservation of digital evidence.</p>
-
       </div>
       <div class="test">
   <div class="clients">
@@ -53,25 +50,12 @@
       <div class="client-box"><i class="fas fa-user-injured"></i><h2>VICTIM</h2><p>Victims of any crime need to know how to handle their digital evidence</p></div>
       <div class="client-box"><i class="fas fa-user-tie"></i><h2>LAWYER</h2><p>You may be missing key elements capable of swinging your hardest case</p></div>
       <div class="client-box"><i class="fas fa-users"></i><h2>CORPORATE</h2><p>Data breaches are a common plauge, we can help you fight back.</p></div>
-      <div class="client-box"><i class="fas fa-user-shield"></i><h2>PERSONAL</h2><p>We specialize in all matters of digital security and evidence collection.</div>
+      <div class="client-box"><i class="fas fa-user-shield"></i><h2>PERSONAL</h2><p>All personal concerns of digital security and evidence</div>
       </div>
     </div>
   </div>
   </div>
 
-  <!--
-  <div class="services">
-      <h1>PROFESSIONAL SERVICES</h1>
-  </div>
-  -->
-
-
-  <!-- FOOTER
-  <div class="footer">
-      <div class="quick-link"><a href="#" id="corporations"><i class="fas fa-users svg"></i></a><span class="labels"><br>Corporate</span></div>
-      <div class="quick-link"><a href="#" id="individuals"><i class="fas fa-user svg"></i></a><span class="labels"><br>Personal</span></div>
-      <div class="quick-link"><a href="#professionals" id="corporations"><i class="fas fa-user-tie svg"></i><a><span class="labels"><br>Legal Professional</span></div>
-  </div> -->
 
 <script src="script.js"></script>
 </body>
